clusters/on-prem/apps/media/bazarr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bazarr
  namespace: media
  labels:
    app: bazarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  serviceName: bazarr    
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
      - name: bazarr
        image: lscr.io/linuxserver/bazarr:latest@sha256:be98501c48d98eec67a3269cacf884eb122b884d0775cdb8ee9a03947ef2b493
        resources:
          requests:
            cpu: 15m
            memory: 226M
          limits:
            cpu: 15m
            memory: 226M
        ports:
        - containerPort: 6767
        volumeMounts:
          - name: config
            mountPath: /config
          - name: tvshows
            mountPath: /tvshows
          - name: movies
            mountPath: /movies
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: bazarr-pvc
        - name: tvshows
          hostPath:
            path: /mnt/media/tvshows
            type: DirectoryOrCreate
        - name: movies
          hostPath:
            path: /mnt/media/movies
            type: DirectoryOrCreate
