clusters/on-prem/apps/media/bazarr/ingress.sops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: bazarr-ingress
    namespace: media
    annotations:
        kubernetes.io/ingress.class: traefik
        cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
    tls:
        - hosts:
            - ENC[AES256_GCM,data:1R4EWIXgGUX5L1hNqdMzkX7sGMvqi3Q=,iv:cQ4lsJFLb4cVJeRsaoJboGHPnT1hic9SCXdP7rLzEQI=,tag:syGAtNs81azHw3YxvkWb0A==,type:str]
    rules:
        - host: ENC[AES256_GCM,data:9yc4swgmmM7vLyuIM8pScoAR+8pqc6A=,iv:ZEfK5860aXX3hmua7o4QFy601kVU9mEuZikta+DnI8E=,tag:5hdHGJ6jD4iGJN05XlJiGQ==,type:str]
          http:
            paths:
                - pathType: Prefix
                  path: /
                  backend:
                    service:
                        name: bazarr-service
                        port:
                            number: 6767
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1xl8mrtu70kvhjdl2nva6dpt8wsy3fhmz6605fmwjujc3zztyeyzqd07nvv
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB6OVBqcitxUjBJQU5peEVK
[...]
            82IbKYZjWBaWJAA0tSSW8HeFAhgNjdMoflAhPcdgsQnwhz7j1AtsvA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2023-12-30T17:59:20Z"
    mac: ENC[AES256_GCM,data:2AXdpNVOKPgg1fHz+TUeVvo/CjuZTwYEWv0cAufW0bVoop6GIToQ981l+rDLmC4CGV6QgRoBZDDqljDvSQyCd3A1+hY7mAbwRTdIG6+RjrbLGFDtqklxpt0XLuML6B2hrG2PGQN531Y+3IRRt+SuZ21qu5ydKYAL8u12pripgCg=,iv:6pq0GE0Da/14ZyaARiO3tS9AAfgKUVVFiDafpar3oYg=,tag:xcKU5LM1YmWLeccJAV7hDA==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|email|dnsNames|hosts|host|externalUrl)$
    version: 3.8.1
